# horoscope_front

./: .env.example  .eslintrc.cjs  .gitignore  .vitest.out.txt  AGENTS.md  COMPLETION-SUMMARY.md  FE-0.4-http-client-issue.md  FE-0.4-http-client-pr.md  FE-1-app-shell-issue.md  FE-1-app-shell-pr.md  FE-10-tests-issue.md  FE-10-tests-pr.md  FE-11-IMPLEMENTATION-COMPLETE.md  FE-11-security-ux-errors-issue.md  FE-12-pages-navigation-issue.md  FE-13_AUDIT.md  FE-13_AUDIT_FINAL.md  FE-13_COMPLETION_SUMMARY.md  FE-2-auth-mvp-issue.md  FE-2-auth-mvp-pr.md  FE-3-api-paywall-issue.md  FE-3-api-paywall-pr.md  FE-5-IMPLEMENTATION-COMPLETE.md  FE-5-READY-TO-PUBLISH.md  FE-5-horoscope-issue.md  FE-5-horoscope-pr.md  FE-6-FINAL-SUMMARY.md  FE-6-IMPLEMENTATION-COMPLETE.md  FE-6-VALIDATION-COMPLETE.md  FE-6-chat-issue.md  FE-6-chat-pr.md  FE-7-account-rgpd-issue.md  FE-7-account-rgpd-pr.md  FE-8-legal-issue.md  FE-8-legal-pr.md  FE-9-widgets-shared-issue.md  FILES-CHANGED-FE-5.md  FINAL-STATUS.md  GITHUB-PUBLICATION-GUIDE.md  PUBLICATION-SUMMARY.md  (+39 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_db.py  cleanup_sqlite.py  conftest.py  drop_column.py  fail_ops.txt  failures.txt  horoscope.db  horoscope.db-shm  horoscope.db-wal  horoscope.db.bak_20260307_175439  horoscope.db.old2  horoscope.db.old3  horoscope.db.old4  horoscope_validation_30_8.db  horoscope_validation_30_8_final.db  horoscope_validation_30_8_final2.db  horoscope_validation_30_8_v2.db  manual_migrate.py  pyproject.toml
backend/_bmad/_config/: files-manifest.csv  manifest.yaml
backend/_bmad/bmb/: config.yaml
backend/_bmad/bmm/: config.yaml
backend/_bmad/cis/: config.yaml
backend/_bmad/core/: config.yaml
backend/_bmad/tea/: config.yaml
backend/_bmad/wds/: config.yaml
backend/app/: main.py
backend/app/ai_engine/: __init__.py  config.py  exceptions.py  routes.py  schemas.py
backend/app/api/: health.py  route_exceptions.py
backend/app/core/: api_constants.py  auth_context.py  config.py  constants.py  datetime_provider.py  ephemeris.py  exceptions.py  llm_logging.py  llm_settings.py  log_sanitization.py  pii_patterns.py  rate_limit.py  rbac.py  request_id.py  scheduler.py  security.py  sensitive_data.py  versions.py
backend/app/infrastructure/: __init__.py
backend/app/integrations/: stripe_client.py
backend/app/jobs/: __init__.py  compute_calibration_percentiles.py  generate_daily_calibration_dataset.py  refresh_user_baselines.py
backend/app/llm_orchestration/: ARCHITECTURE.md  admin_models.py  doc_conformity_manifest.py  execution_profiles_types.py  feature_taxonomy.py  gateway.py  golden_regression_registry.py  legacy_prompt_runtime.py  legacy_residual_registry.py  models.py  narrator_contract.py  performance_registry.py  persona_boundary.py  placeholder_policy.py  prompt_governance_registry.py  prompt_version_lookup.py  schemas.py  seed_registry.py  semantic_invariants_registry.py  simulation_context.py
backend/app/prediction/: __init__.py  aggregator.py  astro_calculator.py  astrologer_prompt_builder.py  block_generator.py  calibrator.py  category_codes.py  context.py  context_loader.py  contribution_calculator.py  daily_prediction_evidence_builder.py  decision_window_builder.py  domain_router.py  input_hash.py  (+28 more)
backend/docs/: README.md  astrology-zodiac-runtime-contract.md  basic-natal-reading-v2-contract.md  entitlements-canonical-platform.md  llm-canonical-consumption-rebuild.md  llm-db-cleanup-registry.json  llm-db-governance.md  llm-model-structure.md  llm-runtime-source-of-truth.md  narrative-natal-reading-v1-contract.md  openapi-public-internal-boundary.md  ownership-index.md
backend/migrations/: env.py
backend/scripts/: __init__.py  archive_b2b_legacy_usage_counters.py  backfill_astrologer_profiles.py  backfill_plan_catalog_from_legacy.py  build_llm_golden_evidence.py  build_llm_qualification_evidence.py  build_llm_release_candidate.py  build_llm_release_readiness_report.py  build_llm_smoke_evidence.py  check_canonical_entitlement_db_consistency.py  check_db_columns.py  check_doc_conformity.py  check_feature_scope_registry.py  check_llm_db_cleanup.py  clear_chats.py  create_tables.py  cross_tool_report.py  debug_api_natal_call.py  debug_natal_internal_error.py  diagnose_natal_interpretation_duplicates.py  fix_schemas_strict.py  generate_calibration_review_grid.py  generate_prediction_qa_cases.py  legacy_residual_report.py  migrate_b2b_usage_counters_to_enterprise_counters.py  migrate_legacy_quota_to_canonical.py  retry_ops_review_queue_alerts.py  run_ops_review_queue_alerts.py  seed_28_4.py  seed_29_prompts.py  seed_30_14_chat_prompt.py  seed_30_15_chat_naturalite.py  seed_30_17_fix_schema_minItems.py  seed_30_2_astroresponse_v2.py  seed_30_3_gpt5_prompts.py  seed_30_5_new_use_cases.py  seed_30_8_v3_prompts.py  seed_31_prediction_reference_v2.py  seed_66_15_assembly_convergence.py  seed_66_20_convergence.py  (+11 more)
backend/tests/: conftest.py
(+7153 files in other folders)
