[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "horoscope-backend"
version = "0.1.0"
description = "Horoscope backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.16.5",
  "email-validator==2.2.0",
  "fastapi==0.129.0",
  "PyJWT==2.10.1",
  "psycopg[binary]==3.2.12",
  "sqlalchemy==2.0.44",
  "tzdata==2025.2",
  "uvicorn==0.41.0",
]

[project.optional-dependencies]
dev = [
  "bandit==1.8.6",
  "httpx==0.28.1",
  "pip-audit==2.9.0",
  "pytest==9.0.2",
  "ruff==0.15.1",
]

[dependency-groups]
dev = [
  "bandit==1.8.6",
  "httpx==0.28.1",
  "pip-audit==2.9.0",
  "pytest==9.0.2",
  "ruff==0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
