[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "horoscope-backend"
version = "0.1.0"
description = "Horoscope backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.16.5",
  "email-validator==2.2.0",
  "fastapi==0.129.0",
  "jinja2>=3.0.0",
  "openai>=2.0.0",
  "pydantic-settings>=2.0.0",
  "PyJWT==2.10.1",
  "psycopg[binary]==3.2.12",
  "redis>=5.0.0",
  "sqlalchemy==2.0.44",
  "stripe==14.4.1",
  "jsonschema[format]>=4.20.0",
  "timezonefinder>=6.5.0",
  "tzdata==2025.2",
  "pyswisseph>=2.10.0",
  "uvicorn==0.41.0",
  "cryptography>=42.0.0",
  "xhtml2pdf==0.2.16",
  "sib-api-v3-sdk>=7.6.0",
  "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "bandit==1.8.6",
  "httpx==0.28.1",
  "pip-audit==2.9.0",
  "pytest==9.0.2",
  "pytest-asyncio>=0.23.0",
  "ruff==0.15.1",
]

[dependency-groups]
dev = [
  "bandit==1.8.6",
  "httpx==0.28.1",
  "pip-audit==2.9.0",
  "pytest==9.0.2",
  "pytest-asyncio>=0.23.0",
  "ruff==0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests", "app/ai_engine/tests", "tests/evaluation"]
asyncio_mode = "auto"
markers = [
  "golden: SwissEph precision tests with frozen reference values (requires pyswisseph)",
  "regression: regression tests (deselect with -m 'not regression')",
  "evaluation: marks tests as part of the evaluation matrix (Story 66.16)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
