[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "horoscope-backend"
version = "0.1.0"
description = "Horoscope backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.16.5",
  "email-validator==2.2.0",
  "fastapi==0.129.0",
  "jinja2>=3.0.0",
  "pydantic-settings>=2.0.0",
  "PyJWT==2.10.1",
  "psycopg[binary]==3.2.12",
  "redis>=5.0.0",
  "sqlalchemy==2.0.44",
  "stripe==14.4.1",
  "jsonschema[format]>=4.20.0",
  "tzdata==2025.2",
  "uvicorn==0.41.0",
  "httpx==0.28.1",
  "cryptography>=42.0.0",
  "xhtml2pdf==0.2.16",
  "sib-api-v3-sdk>=7.6.0",
  "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "bandit==1.8.6",
  "pip-audit==2.9.0",
  "pytest==9.0.2",
  "pytest-asyncio>=0.23.0",
  "ruff==0.15.1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "bandit==1.8.6",
  "httpx==0.28.1",
  "pip-audit==2.9.0",
  "pytest==9.0.2",
  "pytest-asyncio>=0.23.0",
  "ruff==0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "app/tests",
  "tests/api",
  "tests/architecture",
  "tests/evaluation",
  "tests/integration",
  "tests/llm_orchestration",
  "tests/unit",
]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"
filterwarnings = [
  "ignore:Skipped unsupported reflection of expression-based index ix_llm_assembly_config_active_unique:sqlalchemy.exc.SAWarning",
]
markers = [
  "golden: precision tests with frozen external Astral reference values",
  "integration: DB/API integration tests excluded from fast local runs",
  "regression: regression tests (deselect with -m 'not regression')",
  "slow: DB migration, subprocess, full regression, or quality-gate tests excluded from fast local runs",
  "evaluation: marks tests as part of the evaluation matrix (Story 66.16)",
  "provider_smoke: opt-in provider smoke tests requiring explicit credentials and external LLM calls",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".tmp-pytest", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
force-include = { "../docs/recherches astro/signs_keywords.json" = "docs/recherches astro/signs_keywords.json" }
